Set langgraph with tool's

--- a/docs/Notebooks/audio_usage.ipynb
+++ b/docs/Notebooks/audio_usage.ipynb
@@ -6,11 +6,11 @@
    "id": "a7d379d9-0524-48b2-bd23-dedb2b1b7b8a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-19T05:26:29.268684Z",
-     "iopub.status.busy": "2026-01-19T05:26:29.268411Z",
-     "iopub.status.idle": "2026-01-19T05:26:29.342846Z",
-     "shell.execute_reply": "2026-01-19T05:26:29.342142Z",
-     "shell.execute_reply.started": "2026-01-19T05:26:29.268663Z"
+     "iopub.execute_input": "2026-01-20T20:03:12.012032Z",
+     "iopub.status.busy": "2026-01-20T20:03:12.011752Z",
+     "iopub.status.idle": "2026-01-20T20:03:12.084587Z",
+     "shell.execute_reply": "2026-01-20T20:03:12.083947Z",
+     "shell.execute_reply.started": "2026-01-20T20:03:12.012015Z"
     }
    },
    "outputs": [],
@@ -24,11 +24,11 @@
    "id": "03c0b87b-c887-4fae-8b40-32a8209a3ad0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-19T05:26:31.169354Z",
-     "iopub.status.busy": "2026-01-19T05:26:31.169070Z",
-     "iopub.status.idle": "2026-01-19T05:26:31.171780Z",
-     "shell.execute_reply": "2026-01-19T05:26:31.171223Z",
-     "shell.execute_reply.started": "2026-01-19T05:26:31.169337Z"
+     "iopub.execute_input": "2026-01-20T20:03:12.315840Z",
+     "iopub.status.busy": "2026-01-20T20:03:12.315560Z",
+     "iopub.status.idle": "2026-01-20T20:03:12.318499Z",
+     "shell.execute_reply": "2026-01-20T20:03:12.317820Z",
+     "shell.execute_reply.started": "2026-01-20T20:03:12.315824Z"
     }
    },
    "outputs": [],
@@ -43,31 +43,52 @@
    "id": "9f996556-fcba-44f7-abc4-70692ae80066",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-19T05:26:31.441089Z",
-     "iopub.status.busy": "2026-01-19T05:26:31.440803Z",
-     "iopub.status.idle": "2026-01-19T05:26:31.446242Z",
-     "shell.execute_reply": "2026-01-19T05:26:31.445417Z",
-     "shell.execute_reply.started": "2026-01-19T05:26:31.441074Z"
+     "iopub.execute_input": "2026-01-20T20:03:12.729776Z",
+     "iopub.status.busy": "2026-01-20T20:03:12.729514Z",
+     "iopub.status.idle": "2026-01-20T20:03:12.733008Z",
+     "shell.execute_reply": "2026-01-20T20:03:12.732363Z",
+     "shell.execute_reply.started": "2026-01-20T20:03:12.729763Z"
     }
    },
    "outputs": [],
    "source": [
     "big_text = \"\"\"\n",
-    "10.000’den fazla geliştiricinin teknik mülakatlara hazırlanmasına yardımcı oldum.\n",
+    "\n",
+    "Giriş:\n",
+    "Bu videoda 2026 için öğrenilmesi en faydalı programlama dilleri sıralanıyor. Önemli olan trendler değil. Gerçek üretimde hangi diller kullanılıyor, hangi rollerde talep var ve AI hangi becerileri güçlendiriyor — bunlar dikkate alındı.\n",
+    "\n",
+    "1. TypeScript:\n",
+    "TypeScript, modern uygulamaların varsayılan dili oldu. GitHub verilerine göre en çok katkı alan dillerden biri. Artık sadece ön yüz değil; arka uç, iç araçlar, geliştirici araçları ve AI ürünleri için de kullanılıyor. Birçok startup TypeScript’i uçtan uca kullanıyor. AI arayüz kodu üretebilir ama durum yönetimi, veri modelleri ve mimari kararları hâlâ insan ekspertizine ihtiyaç duyuyor. Gerçek ürünler geliştirmek istiyorsanız TypeScript yüksek verim sağlar.\n",
+    "\n",
+    "2. Python:\n",
+    "Python, geliştiriciler arasında yaygın ve büyüyen bir dil. Hızı için değil; sistemleri orkestra etmesi, veri akışlarını yönetmesi, iş otomasyonu ve AI boru hatlarını kontrol etmesi için güçlü. Ağır hesaplamalar C++ veya Rust’ta olsa bile Python genelde üstte koordinasyonu yapar. Ancak Python artık daha kolay yazılabiliyor, bu yüzden tek başına nadir bir yetenek değil. En iyi strateji: Python’u başka bir uzmanlıkla birleştirmek. Örneğin Python + AI, Python + altyapı veya domain bilgisi.\n",
+    "\n",
+    "3. Go:\n",
+    "Go, bulut altyapısı, DevOps araçları ve yüksek verimli arka uç servislerinde yaygın. Go işleri genelde daha az başvuru alır ama beklentiler yüksektir; çünkü Go geliştiricileri genelde sistemleri ve üretimi iyi anlar. Go rolleri sorumluluk ve güven gerektirir; bu da maaşları ve kariyer fırsatlarını yükseltir. Altyapı ve yüksek ölçekli servislerle ilgileniyorsanız Go iyi bir yatırım.\n",
+    "\n",
+    "4. Rust:\n",
+    "Rust, geliştiriciler tarafından çok beğeniliyor ama hâlâ yaygınlık kazanıyor. Sistem programlama, güvenlik hassas yazılımlar, blockchain ve performans kritik uygulamalarda tercih ediliyor. Rust, bellek hatalarını ve güvenlik açıklarını önlemekte çok başarılı. AI’nın sahte yetkinlik üretmesinin zor olduğu dillerden biri; yani Rust bilenler daha zor ikame edilir. Donanım seviyesine yakın ve uzun ömürlü yazılımlar yapmak istiyorsanız Rust sağlam bir tercih.\n",
+    "\n",
+    "5. Java ve C#:\n",
+    "Bu iki dili benzer kategoriye alıyoruz. Kurumsal sistemlerde, finansal platformlarda ve büyük, eski altyapılarda hâlâ yaygın olarak kullanılıyorlar. Bankalar, büyük şirketler ve hükümet sistemleri bu dillerle çalışıyor. Eğer stabil, kurumsal roller ve karmaşık gerçek dünya sistemleri istiyorsanız Java veya C# bilmek avantaj sağlar. Özellikle başlangıç seviyesinde bu dillerle öne çıkmak mümkün.\n",
+    "\n",
+    "Kapanış ve tavsiye:\n",
+    "En büyük hata diller toplamak. Bunun yerine bir ana dil seçin ve derinleşin. Sonra bir “çarpan” (örneğin altyapı, AI veya domain uzmanlığı) ekleyin. 2026’da derinlik, yüzeyselliğe göre daha değerli olacak. Hangi dili öğreneceğinizi yorumlarda belirtin.\n",
+    "\n",
     "\"\"\".strip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "223b1bfd-bddf-4489-b2d9-01aacdfd1233",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-19T05:26:50.690986Z",
-     "iopub.status.busy": "2026-01-19T05:26:50.690717Z",
-     "iopub.status.idle": "2026-01-19T05:27:55.230469Z",
-     "shell.execute_reply": "2026-01-19T05:27:55.229760Z",
-     "shell.execute_reply.started": "2026-01-19T05:26:50.690971Z"
+     "iopub.execute_input": "2026-01-20T20:03:13.905512Z",
+     "iopub.status.busy": "2026-01-20T20:03:13.905231Z",
+     "iopub.status.idle": "2026-01-20T20:03:31.674653Z",
+     "shell.execute_reply": "2026-01-20T20:03:31.673972Z",
+     "shell.execute_reply.started": "2026-01-20T20:03:13.905498Z"
     }
    },
    "outputs": [],
@@ -85,22 +106,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "bdce2a38-7825-4aa1-9053-203212388eb0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-19T05:27:55.231180Z",
-     "iopub.status.busy": "2026-01-19T05:27:55.230944Z",
-     "iopub.status.idle": "2026-01-19T05:27:57.071892Z",
-     "shell.execute_reply": "2026-01-19T05:27:57.071229Z",
-     "shell.execute_reply.started": "2026-01-19T05:27:55.231167Z"
+     "iopub.execute_input": "2026-01-20T20:03:31.696411Z",
+     "iopub.status.busy": "2026-01-20T20:03:31.696169Z",
+     "iopub.status.idle": "2026-01-20T20:03:32.496008Z",
+     "shell.execute_reply": "2026-01-20T20:03:32.495357Z",
+     "shell.execute_reply.started": "2026-01-20T20:03:31.696398Z"
     }
    },
    "outputs": [],
    "source": [
     "r.raise_for_status()\n",
     "\n",
-    "with open(\"audio2.wav\", \"wb\") as f:\n",
+    "with open(\"audio3.wav\", \"wb\") as f:\n",
     "    for chunk in r.iter_content(chunk_size=8192):\n",
     "        if chunk:\n",
     "            f.write(chunk)"
