--- a/docs/Notebooks/Untitled.ipynb
+++ b/docs/Notebooks/Untitled.ipynb
@@ -2,8 +2,103 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "af234b50-9e50-40c3-832f-c66c1b484e3f",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-29T21:00:03.316375Z",
+     "iopub.status.busy": "2026-01-29T21:00:03.314777Z",
+     "iopub.status.idle": "2026-01-29T21:00:03.335503Z",
+     "shell.execute_reply": "2026-01-29T21:00:03.334637Z",
+     "shell.execute_reply.started": "2026-01-29T21:00:03.316316Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from requests import api"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b7df709c-3516-48f4-b525-1ab06ba1fbb3",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-29T16:19:42.668358Z",
+     "iopub.status.busy": "2026-01-29T16:19:42.668051Z",
+     "iopub.status.idle": "2026-01-29T16:19:52.866772Z",
+     "shell.execute_reply": "2026-01-29T16:19:52.866010Z",
+     "shell.execute_reply.started": "2026-01-29T16:19:42.668330Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "{\"status\":\"success\",\"filename\":\"The Django admin site _ Django documentation _ Django.pdf\",\"chunks_processed\":157,\"embedding_dim\":3072,\"saved_to_db\":true}\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('The Django admin site _ Django documentation _ Django.pdf', 'rb') as f:\n",
+    "    files = {'file': f} \n",
+    "    r = api.post('http://localhost:8000/embed/load-document', files=files)\n",
+    "    \n",
+    "print(r.status_code)\n",
+    "print(r.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bab69a7-c1c5-459e-b42f-bc47733a0961",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30d9ac8a-c636-4a5f-b3b7-ac92de623246",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8eb7534e-45a4-474b-8beb-ed6c437c0e6b",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-29T21:00:04.627597Z",
+     "iopub.status.busy": "2026-01-29T21:00:04.627352Z",
+     "iopub.status.idle": "2026-01-29T21:02:05.920391Z",
+     "shell.execute_reply": "2026-01-29T21:02:05.919590Z",
+     "shell.execute_reply.started": "2026-01-29T21:00:04.627582Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "{\"files\":[{\"filename\":\"1.+ÖDEV.pdf\",\"document_count\":7},{\"filename\":\"The Django admin site _ Django documentation _ Django.pdf\",\"document_count\":470},{\"filename\":\"dokum.pdf\",\"document_count\":2},{\"filename\":\"tüm.pdf\",\"document_count\":879},{\"filename\":\"İlk 12 Konu - Ücretsiz PDF.pdf\",\"document_count\":112}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "r = api.get('http://localhost:8000/embed/list-files')\n",
+    "print(r.status_code)\n",
+    "print(r.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2148111c-c5ae-4430-9f51-c2f600c7509d",
    "metadata": {},
    "outputs": [],
    "source": []
